network/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
