network/frontend-network-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-default-deny
  namespace: frontend-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
