network/frontend-network-outbound.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress
  namespace: frontend-ns
spec:
  podSelector:
    matchLabels:
      app: frontend
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: backend-ns
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Egress
